# email-analyzer

./: .gitignore  README.md  pyproject.toml
src/mail_analyze/: mail-analyze.py
